--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -606,6 +606,7 @@ nav:
   - Concepts:
       - Egeria Glossary: concepts/index.md
       - Basic Concepts: concepts/basic-concepts.md
+      - Action Target: concepts/action-target.md
       - Anchor: concepts/anchor.md
       - Archive Engine: concepts/archive-engine.md
       - Asset: concepts/asset.md
@@ -641,11 +642,12 @@ nav:
       - External Reference: concepts/external-reference.md
       - Favorite Collections: concepts/favorite-things-collection.md
       - Feedback: concepts/feedback.md
-      - Glossary Term: /principles/common-data-definitions/anatomy-of-a-glossary.md
+      - Glossary Term: /practices/common-data-definitions/anatomy-of-a-glossary.md
       - GUID: concepts/guid.md
       - Governance Action: concepts/governance-action.md
       - Governance Action Engine: concepts/governance-action-engine.md
-      - Governance Action Process: concepts/governance-action-release-process.md
+      - Governance Action Process: concepts/governance-action-process.md
+      - Governance Action Service: concepts/governance-action-service.md
       - Governance Action Type: concepts/governance-action-type.md
       - Governance Engine: concepts/governance-engine.md
       - Governance Engine Definition: concepts/governance-engine-definition.md
@@ -668,6 +670,7 @@ nav:
       - Karma Point Threshold: concepts/karma-point.md
       - Karma Point Plateau: concepts/karma-point-plateau.md
       - Like: concepts/like.md
+      - Lineage: concepts/lineage.md
       - Metadata Access Point: concepts/metadata-access-point.md
       - Metadata Access Server: concepts/metadata-access-server.md
       - Metadata Access Store: concepts/metadata-access-store.md
@@ -711,6 +714,7 @@ nav:
       - Server Name: concepts/server-name.md
       - Software Capability: concepts/software-capability.md
       - Star Rating: concepts/review.md
+      - Subject Area: concepts/subject-area.md
       - Tag: concepts/informal-tag.md
       - To Do: concepts/to-do.md
       - Uni-link Relationships: concepts/uni-multi-link.md
