--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -351,7 +351,7 @@ nav:
               - People: types/1/0112-People.md
               - Teams: types/1/0115-Teams.md
               - IT Profiles: types/1/0117-IT-Profiles.md
-              - Collections: types/1/0120-Collections.md
+              - Assignment Scopes: types/1/0120-Assignment-Scopes.md
               - Projects: types/1/0130-Projects.md
               - Meetings: types/1/0135-Meetings.md
               - Actions for People: types/1/0137-Actions.md
