--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -287,6 +287,8 @@ nav:
       - Release Notes:
         - Latest Release: release-notes/latest.md
         - Next Release: release-notes/next.md
+        - v3.11: release-notes/3-11.md
+        - v3.10: release-notes/3-10.md
         - v3.9: release-notes/3-9.md
         - v3.8: release-notes/3-8.md
         - v3.7: release-notes/3-7.md
