--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -340,6 +340,7 @@ nav:
               - More Information: types/0/0019-More-Information.md
               - Property Facets: types/0/0020-Property-Facets.md
               - Collections: types/0/0021-Collections.md
+              - Translations: types/0/0022-Translations.md
               - Locations: types/0/0025-Locations.md
               - Endpoints: types/0/0026-Endpoints.md
               - Operating Platforms: types/0/0030-Hosts-and-Platforms.md
