Add digital subscriptions, agreements and T&Cs
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -437,6 +437,8 @@ nav:
               - Incident Reporting: types/4/0470-Incident-Reporting.md
               - Licenses: types/4/0481-Licenses.md
               - Certifications: types/4/0482-Certifications.md
+              - Terms and Conditions: types/4/0483-Terms-And-Conditions.md
+              - Agreements: types/4/0484-Agreements.md
               - Data Processing Purposes: types/4/0485-Data-Processing-Purposes.md
           - 5. Structures:
               - Area 5 Structures: types/5/index.md
@@ -486,6 +488,7 @@ nav:
           - 7. Lineage:
               - Area 7 Lineage: types/7/index.md
               - Digital Service: types/7/0710-Digital-Service.md
+              - Digital Subscription: types/7/0711-Digital-Subscription.md
               - Digital Service Ownership: types/7/0715-Digital-Service-Ownership.md
               - Information Supply Chains: types/7/0720-Information-Supply-Chains.md
               - Solution Components: types/7/0730-Solution-Components.md
