--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -857,7 +857,8 @@ theme:
 
 extra_css:
   - assets/stylesheets/egeria.css
-
+extra_javascript:
+    - js/egeria.js
 extra:
   social:
     - icon: fontawesome/brands/github
