--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -32,7 +32,9 @@ nav:
               - Onboarding Organization: guides/planning/organization/overview.md
               - Governance Program: guides/planning/governance-program/overview.md
       - Integration:
-          - Integration Guide: guides/integration/overview.md
+          - Integration Guide:
+              - Integration Guide: guides/integration/index.md
+              - Catalog Integration: guides/integration/types-of-metadata-repository.md
           - Connector Catalog:
               - Connector Overview: connectors/index.md
               - Governance Actions:
@@ -156,7 +158,7 @@ nav:
               - Metadata Access Server: guides/diagnostic/metadata-access-server-diagnostic-guide.md
       - User Interfaces:
           - User Interface overview: user-interfaces/index.md
-          - Egeria General User UI: user-interfaces/general/overview
+          - Egeria General User UI: user-interfaces/general/overview.md
           - Egeria Ecosystem UI:
               - Egeria Ecosystem UI Overview: user-interfaces/ecosystem/index.md
               - Type Explorer (TEX): guides/ecosystem-ui/tex-user-guide.md
@@ -263,7 +265,6 @@ nav:
   - Community:
       - Community Recognition: community/index.md
       - Community Guide: guides/community.md
-      - Integration Guide: guides/integration/overview.md
       - Contributing:
           - Project Operations: guides/project-operations.md
           - Code:
