Update release notes 3.13
Signed-off-by: Ljupcho Palashevski <lpalashevski@gmail.com>

--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -301,6 +301,7 @@ nav:
       - Core Egeria:
         - Latest Release: release-notes/latest.md
         - Next Release: release-notes/next.md
+        - v3.13: release-notes/3-13.md
         - v3.12: release-notes/3-12.md
         - v3.11: release-notes/3-11.md
         - v3.10: release-notes/3-10.md
