Correct use of asset vs resource
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -342,6 +342,7 @@ nav:
       - Roadmap: release-notes/roadmap.md
       - Content Status: release-notes/content-status.md
   - Reference:
+      - Categories of Metadata: patterns/metadata-manager/categories-of-metadata.md
       - Open Metadata Types:
           - Open Metadata Type System: types/index.md
           - 0. Base:
