--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -298,6 +298,7 @@ nav:
   - Releases:
       - Overview: release-notes/overview.md
       - Monthly News:
+        - October 2022: release-notes/november-2022.md
         - October 2022: release-notes/october-2022.md
       - Core Egeria:
         - Latest Release: release-notes/latest.md
