--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -81,6 +81,7 @@ nav:
                           - IBM Information Governance Catalog (IGC) OMRS Repository Connector: connectors/repository/igc/overview.md
                           - SAS Viya OMRS Repository Connector: connectors/repository/sas-viya/overview.md
                           - Hive Metastore OMRS Proxy Repository Connector: connectors/repository/hms/overview.md
+                          - Repository proxy embedded repository: /connectors/repository/repository-proxy-embedded-repository
                   - Audit Log Destination:
                       - Console: connectors/runtime/console-audit-log-destination-connector.md
                       - Event Topic: connectors/runtime/event-topic-audit-log-destination-connector.md
